--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
         <br>Show the full record of the student with the email joe@weber.edu
     </li>
     <li><a href="{{ url_for('select_students') }}" >select_students</a>
-        <br>Show all the records in the db
+        <br>Show all the students in the db
     </li>
     <li><a href="{{ url_for('add_courses') }}" >add_courses</a>
         <br>Add two courses: Anthro 1000 and English 1100
