--- a/templates/index.html
+++ b/templates/index.html
@@ -3,61 +3,75 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>CRUD APP</title>
+  <title>SQLAlchemy Practic</title>
 </head>
 <style>
-    body{
-    text-align: center;
-    margin: auto
-    }
-    h4{width: 300px; height:50px; margin:auto;}
-    ul{list-style-type:none; margin: 100px 0; padding:0}
-    li{margin:10px 0; padding:0}
-
+h1{text-align: center}
+    h4{padding: 20px}
+div{
+  width: 40%;
+  float: left;
+  padding: 10px;
+  border: 2px solid silver;
+}
+li{
+margin-bottom: 15px
+}
+ul{
+margin-bottom: 15px; border: 1px solid black;
+}
 </style>
 <body>
-<h1>CRUD APP</h1>
-<h4>{{message|safe}}</h4>
-<ul>
-    <li><a href="{{ url_for('drop_all') }}" >drop_all</a>
-        <br>(the db.drop_all method)
-    </li>
-    <li><a href="{{ url_for('create_all') }}" >create_all </a>
-        <br>(the db.create_all method)
-    </li>
-    <li><a href="{{ url_for('add_students') }}" >add_students</a><br>(add:
-        name=Joe, age=21, email=joe@weber.edu, nicknames=[]<br>
-        name=Mary, age=22, email=mary@weber.edu, nicknames=['Maria'])<br>
-    </li>
-    <li><a href="{{ url_for('add_nicknames_to_student') }}" >add_nicknames_to_student</a>
-    <br>(add nicknames Jojo and Joey to the student named Joe)
-    </li>
-    <li><a href="{{ url_for('update_student') }}" >update_student</a>
-    <br>(Change Joe's name to Joseph in the record with email joe@weber.edu)
-    </li>
-    <li><a href="{{ url_for('delete_student') }}" >delete_student</a>
-    <br>(Delete the record with the email named joe@weber.edu)
-    </li>
-    <li><a href="{{ url_for('select_student') }}" >select_student</a>
-        <br>Show the full record of the student with the email joe@weber.edu
-    </li>
-    <li><a href="{{ url_for('select_students') }}" >select_students</a>
-        <br>Show all the students in the db
-    </li>
-    <li><a href="{{ url_for('add_courses') }}" >add_courses</a>
-        <br>Add two courses: Anthro 1000 and English 1100
-    </li>
-    <li><a href="{{ url_for('enroll_students') }}" >enroll_students</a>
-        <br>Enroll Joe in Anthro and English, Enroll Maria in in Anthro
-    </li>
-        <li><a href="{{ url_for('show_course_enrollments') }}" >show_course_enrollments</a>
-        <br>Show enrollments in Anthro and English
-    </li>
-    </li>
-        <li><a href="{{ url_for('show_student_enrollments') }}" >show_student_enrollments</a>
-        <br>Show enrollments for Joe
-    </li>
-</ul>
+<h1>SQLAlchemy Practice</h1>
+
+<div>
+       <ul>
+        <li><a href="{{ url_for('drop_all') }}" >drop_all</a>
+            <br>(the db.drop_all method)
+        </li>
+        <li><a href="{{ url_for('create_all') }}" >create_all </a>
+            <br>(the db.create_all method)
+        </li>
+        <li><a href="{{ url_for('add_students') }}" >add_students</a><br>(add:
+            name=Joe, age=21, email=joe@weber.edu, nicknames=[]<br>
+            name=Mary, age=22, email=mary@weber.edu, nicknames=['Maria'])<br>
+        </li>
+        <li><a href="{{ url_for('add_nicknames_to_student') }}" >add_nicknames_to_student</a>
+        <br>(add nicknames Jojo and Joey to the student named Joe)
+        </li>
+        <li><a href="{{ url_for('update_student') }}" >update_student</a>
+        <br>(Change Joe's name to Joseph in the record with email joe@weber.edu)
+        </li>
+        <li><a href="{{ url_for('select_student') }}" >select_student</a>
+            <br>Show the full record of the student with the email joe@weber.edu
+        </li>
+        <li><a href="{{ url_for('select_students') }}" >select_students</a>
+            <br>Show all the students in the db
+        </li>
+        <li><a href="{{ url_for('delete_student') }}" >delete_student</a>
+        <br>(Delete the record with the email named joe@weber.edu)
+        </li>
+    </ul>
+    <ul>
+        <li><a href="{{ url_for('add_courses') }}" >add_courses</a>
+            <br>Add two courses: Anthro 1000 and English 1100
+        </li>
+        <li><a href="{{ url_for('enroll_students') }}" >enroll_students</a>
+            <br>Enroll Joe in Anthro and English, Enroll Maria in in Anthro
+        </li>
+            <li><a href="{{ url_for('show_course_enrollments') }}" >show_course_enrollments</a>
+            <br>Show enrollments in Anthro and English
+        </li>
+        </li>
+            <li><a href="{{ url_for('show_student_enrollments') }}" >show_student_enrollments</a>
+            <br>Show enrollments for Joe
+        </li>
+    </ul>
+</div>
+<div>
+   <h4>{{message|safe}}</h4>
+</div>
+
 
 
 </body>
