Add student form and add student form with nicknames working

--- a/templates/add_stud_w_nn.html
+++ b/templates/add_stud_w_nn.html
@@ -25,7 +25,7 @@
             {% endif %}
         {% endfor %}
     {% endfor %}
-    {{ form.add_nickname }}
+    {{ form.add_nickname }}{{ form.remove_nickname }}
     </fieldset>
     {{ form.submit }}
 </form>
