--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>SQLAlchemy Practic</title>
+  <title>WTForms Practic</title>
 </head>
 <style>
 h1{text-align: center}
@@ -20,9 +20,10 @@ margin-bottom: 15px
 ul{
 margin-bottom: 15px; border: 1px solid black;
 }
+mark{color:red; font-size: 1.4em}
 </style>
 <body>
-<h1>SQLAlchemy Practice</h1>
+<h1>WTForms Practice</h1>
 {% with messages = get_flashed_messages() %}
   {% if messages %}
     <ul class=flashes>
@@ -40,26 +41,15 @@ margin-bottom: 15px; border: 1px solid black;
         <li><a href="{{ url_for('create_all') }}" >create_all </a>
             <br>(the db.create_all method)
         </li>
-        <li><a href="{{ url_for('add_students') }}" >add_students</a><br>(add:
-            student without nicknames)<br>
+           <li><a href="{{ url_for('add_students') }}" >add_students</a><br>(A <mark>WTForm</mark> For Creating A Student WITHOUT Nickname Option)<br>
         </li>
-        <li><a href="{{ url_for('add_students_with_nn_option') }}" >add_students_with_nn_option</a><br>(add:
-            student with nicknames)<br>
-        </li>
-        <li><a href="{{ url_for('add_nicknames_to_student') }}" >add_nicknames_to_student</a>
-        <br>(add nicknames Jojo and Joey to the student named Joe)
+           <li><a href="{{ url_for('add_students_with_nn_option') }}" >add_students_with_nn_option</a><br>(A <mark>WTForm</mark> To Create A Student WITH Nickname Option)<br>
         </li>
         <li><a href="{{ url_for('update_student') }}" >update_student</a>
-        <br>(Change Joe's name to Joseph in the record with email joe@weber.edu)
-        </li>
-        <li><a href="{{ url_for('select_student') }}" >select_student</a>
-            <br>Show the full record of the student with the email joe@weber.edu
+            <br>(A <mark>WTForm</mark> To UPDATE Student WITH Nickname Option -- uses the student whose student.id=1 )
         </li>
         <li><a href="{{ url_for('select_students') }}" >select_students</a>
             <br>Show all the students in the db
-        </li>
-        <li><a href="{{ url_for('delete_student') }}" >delete_student</a>
-        <br>(Delete the record with the email named joe@weber.edu)
         </li>
     </ul>
     <ul>
@@ -67,14 +57,11 @@ margin-bottom: 15px; border: 1px solid black;
             <br>Add two courses: Anthro 1000 and English 1100
         </li>
         <li><a href="{{ url_for('enroll_students') }}" >enroll_students</a>
-            <br>Enroll Joe in Anthro and English, Enroll Maria in in Anthro
-        </li>
-            <li><a href="{{ url_for('show_course_enrollments') }}" >show_course_enrollments</a>
-            <br>Show enrollments in Anthro and English
+            <br>(A <mark>WTform</mark> to Enroll A Student In Courses -- uses the student whose student.id=1)
         </li>
         </li>
             <li><a href="{{ url_for('show_student_enrollments') }}" >show_student_enrollments</a>
-            <br>Show enrollments for Joe
+            <br>Show enrollments for the student whose student.id=1
         </li>
     </ul>
 </div>
